Fix line wrap in long list items

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -50,7 +50,10 @@ code {
 }
 
 ul {
-  list-style-position: inside;
+  list-style-position: outside;
+  list-style-type: circle;
+  padding: 0;
+  padding-left: 2.5em;
 }
 
 a {
